# dores-core

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: protocol.md
examples/: routing_decision.py  simple_text_chat.py  streaming_response.py  tool_call_loop.py  tool_call_roundtrip.py
src/dores_core/: __init__.py  bridge.py  errors.py  protocol.py  registry.py  route_store.py  routing.py  tool_runtime.py
src/dores_core/client/: __init__.py  mock_local_llm.py
src/dores_core/server/: __init__.py  mock_tool_runtime.py
src/dores_core/transports/: __init__.py  base.py  in_memory.py
src/kiwi_local_llm_bridge/: __init__.py  bridge.py  errors.py  protocol.py  registry.py  route_store.py  routing.py  tool_runtime.py  types.py
src/kiwi_local_llm_bridge/client/: __init__.py  mock_local_llm.py
src/kiwi_local_llm_bridge/server/: __init__.py  mock_tool_runtime.py
src/kiwi_local_llm_bridge/transports/: __init__.py  base.py  in_memory.py
tests/: test_dores_core_bridge.py  test_dores_core_protocol.py  test_dores_core_routing.py  test_kiwi_local_llm_bridge_bridge.py  test_kiwi_local_llm_bridge_protocol.py  test_kiwi_local_llm_bridge_routing.py  test_registry.py  test_timeouts.py  test_tool_call_loop.py  test_unknown_request.py
