[project]
name = "dores-core"
version = "0.1.0"
description = "Connect cloud orchestration to local AI runtimes with server-side tool execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Kiwi AI" }
]
dependencies = [
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dores_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
